bk_ida/gccida/c3/loop_iv_add_mult_hoist
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iv_add_mult_hoist/src/loop.c:8220:44: error: use of undeclared identifier 'machine_mode'
v11 = expand_mult_add( v8, reg, v9, v10, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iv_add_mult_hoist/src/obj/loop.o] Error 1
